--- a/style.css
+++ b/style.css
@@ -16,26 +16,32 @@ header {
 .container_cabecalho {
     display: flex;
     justify-content: space-between;
-    width: 1440;
+    width: 90%;
+    max-width: 1440px;
     background-color: aquamarine;
     margin: 0% auto;
     height: 100%;
+    align-items: center;
 }
 
 .icone_home {
-    height: 24px;
+    height: 70px;
 
 }
 
-.box_busca{
+.box_busca {
     position: relative;
+    width: 60%;
+    max-width: 500%;
+    margin: 0 10px;
+
 }
 
 .icone_lupa {
     height: 24px;
     position: absolute;
     left: 9px;
-    top: 9%;
+    top: 9px;
     fill: #b0b0b0;
 }
 
@@ -44,8 +50,55 @@ header {
 }
 
 .campo_busca {
-    width: 500px;
+    width: 100%;
     height: 42px;
     border-radius: 10px;
-    border: solid 1px #cccccc ;
+    border: solid 1px #cccccc;
+    padding-left: 2.5rem;
+    font-family: "Bellota", system-ui;
+    font-size: 1rem;
+}
+
+.banner {
+    background-color: #2758f8;
+    background-image: url(./Assets/imgs/banner.png);
+    width: 100%;
+    aspect-ratio: 3.2;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.titulo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 100px 0;
+    /* background-color: blueviolet; */
+}
+
+.container {
+    width: 90%;
+    max-width: 1440%;
+    margin: 0 auto;
+}
+
+.titulo span {
+    font-size: 48px;
+}
+
+.titulo hr {
+    background-color: #ffd188;
+    width: 300px;
+    height: 4px;
+    border: none;
+    border-radius: 2px;
+}
+
+.acessivel{
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    clip-path: inset(50%);
+    white-space:nowrap;
 }
