--- a/style.css
+++ b/style.css
@@ -2,10 +2,15 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: "Bellota", system-ui;
 }
 
 svg {
     height: 50px;
+}
+
+body {
+    background-color: #fff6e8;
 }
 
 header {
@@ -18,7 +23,7 @@ header {
     justify-content: space-between;
     width: 90%;
     max-width: 1440px;
-    background-color: aquamarine;
+    /* background-color: aquamarine;  */
     margin: 0% auto;
     height: 100%;
     align-items: center;
@@ -55,7 +60,6 @@ header {
     border-radius: 10px;
     border: solid 1px #cccccc;
     padding-left: 2.5rem;
-    font-family: "Bellota", system-ui;
     font-size: 1rem;
 }
 
@@ -94,11 +98,88 @@ header {
     border-radius: 2px;
 }
 
-.acessivel{
+.acessivel {
     position: absolute;
     width: 1px;
     height: 1px;
     overflow: hidden;
     clip-path: inset(50%);
-    white-space:nowrap;
+    white-space: nowrap;
+}
+
+
+
+
+/* CARDS */
+.cards {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10%;
+    justify-content: center;
+
+}
+
+.card {
+    width: 350px;
+    height: 500px;
+    background-color: #ffffff;
+    border-radius: 30px;
+    text-align: center;
+
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-bottom: 10px;
+    align-items: center;
+    margin-bottom: 100px;
+    box-shadow: 0 4px 4px 2px ooooo25
+}
+
+.card img {
+    width: 100%;
+}
+
+.card p,
+.card samp {
+    font-size: 18px;
+    width: 90%;
+}
+
+.whatsapp {
+    position: fixed;
+    right: 30px;
+    bottom: 30px;
+    transition: transform 0.5s ease-in-out,
+        filter 0.5s ease-in-out;
+
+}
+
+
+
+.whatsapp img {
+    width: 80px;
+    filter: drop-shadow(0 5px 1px #00000025);
+}
+
+
+.whatsapp:hover {
+    transform: scale(1.1);
+    filter: drop-shadow(0 10px 1px #00000025);
+}
+
+footer {
+    height: 60px;
+    width: 100%;
+    background-color: #ffd188;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+footer p{
+    font-family: "Julius Sans One", sans-serif;
+    font-size: 20px;
+        
 }
